# compare-tweets

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/twitter/: client.rs  config.rs
