[package]
name = "compare-tweets"
version = "0.1.0"
edition = "2021"
description = "A twitter bot for comparing engagements between two tweets."
homepage = "https://github.com/AidenHadisi/compare-tweets"
repository = "https://github.com/AidenHadisi/compare-tweets"
keywords = ["twitter", "bot"]
categories = ["twitter"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"
